--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "email": "risonhuang@gmail.com"
   },
   "license": "Apache-2.0",
-  "bugs": "https://github.com/nosir/cleave.js/issues",
-  "homepage": "https://github.com/nosir/cleave.js",
-  "docs": "https://github.com/nosir/cleave.js/blob/master/README.md",
+  "bugs": "https://github.com/mickes77/cleave.js/issues",
+  "homepage": "https://github.com/mickes77/cleave.js",
+  "docs": "https://github.com/mickes77/cleave.js/blob/master/README.md",
   "main": "dist/cleave.js",
   "module": "dist/cleave-esm.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nosir/cleave.js.git"
+    "url": "https://github.com/mickes77/cleave.js.git"
   },
   "scripts": {
     "test": "gulp test",
@@ -66,8 +66,8 @@
     "gulp-sync": "^0.1.4",
     "gulp-uglify": "^1.5.3",
     "mocha": "^3.1.2",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "require-dir": "^0.3.0",
     "rollup": "^1.7.0",
     "rollup-plugin-commonjs": "^9.2.1",
